<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xmlns="http://maven.apache.org/POM/4.0.0" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.feuyeux.grpc</groupId>
  <artifactId>hello-grpc-java</artifactId>
  <version>1.0.0-SNAPSHOT</version>
  <properties>
    <jdk.version>17</jdk.version>
    <lombok.version>1.18.20</lombok.version>
    <grpc.version>1.41.0</grpc.version>
    <protoc.version>3.19.1</protoc.version>
    <netty.version>2.0.43.Final</netty.version>
    <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
    <protobuf-maven-plugin.version>0.6.1</protobuf-maven-plugin.version>
    <junit.version>4.13.2</junit.version>
  </properties>
  <dependencies>
    <!-- grpc -->
    <dependency>
      <artifactId>grpc-netty</artifactId>
      <groupId>io.grpc</groupId>
      <version>${grpc.version}</version>
    </dependency>
    <dependency>
      <artifactId>grpc-protobuf</artifactId>
      <groupId>io.grpc</groupId>
      <version>${grpc.version}</version>
    </dependency>
    <dependency>
      <artifactId>grpc-stub</artifactId>
      <groupId>io.grpc</groupId>
      <version>${grpc.version}</version>
    </dependency>
    <dependency>
      <artifactId>protobuf-java</artifactId>
      <groupId>com.google.protobuf</groupId>
      <version>${protoc.version}</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/io.netty/netty-tcnative-boringssl-static -->
    <dependency>
      <artifactId>netty-tcnative-boringssl-static</artifactId>
      <groupId>io.netty</groupId>
      <scope>runtime</scope>
      <version>${netty.version}</version>
    </dependency>
    <dependency>
      <groupId>javax.annotation</groupId>
      <artifactId>javax.annotation-api</artifactId>
      <version>1.3.2</version>
    </dependency>

    <!-- slf4j -->
    <dependency>
      <artifactId>slf4j-api</artifactId>
      <groupId>org.slf4j</groupId>
      <version>1.7.32</version>
    </dependency>
    <!-- slf4j to log4j2 -->
    <dependency>
      <artifactId>log4j-slf4j-impl</artifactId>
      <groupId>org.apache.logging.log4j</groupId>
      <version>2.17.1</version>
    </dependency>

    <dependency>
      <artifactId>lombok</artifactId>
      <groupId>org.projectlombok</groupId>
      <scope>provided</scope>
      <version>${lombok.version}</version>
    </dependency>

    <dependency>
      <artifactId>junit</artifactId>
      <groupId>junit</groupId>
      <scope>test</scope>
      <version>${junit.version}</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/com.github.stefanbirkner/system-rules -->
    <dependency>
      <artifactId>system-rules</artifactId>
      <groupId>com.github.stefanbirkner</groupId>
      <scope>test</scope>
      <version>1.19.0</version>
    </dependency>
  </dependencies>
  <build>
    <extensions>
      <extension>
        <artifactId>os-maven-plugin</artifactId>
        <groupId>kr.motd.maven</groupId>
        <version>1.7.0</version>
      </extension>
    </extensions>
    <finalName>${project.name}</finalName>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${maven-compiler-plugin.version}</version>
        <configuration>
          <encoding>UTF-8</encoding>
          <release>${jdk.version}</release>
          <compilerArgs>--enable-preview</compilerArgs>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.xolstice.maven.plugins</groupId>
        <artifactId>protobuf-maven-plugin</artifactId>
        <version>${protobuf-maven-plugin.version}</version>
        <configuration>
          <clearOutputDirectory>false</clearOutputDirectory>
          <!--<outputDirectory>${project.build.sourceDirectory}</outputDirectory>-->
          <pluginArtifact>io.grpc:protoc-gen-grpc-java:${grpc.version}:exe:${os.detected.classifier}
          </pluginArtifact>
          <pluginId>grpc-java</pluginId>
          <protoSourceRoot>${project.basedir}/src/main/proto</protoSourceRoot>
          <protocArtifact>com.google.protobuf:protoc:${protoc.version}:exe:${os.detected.classifier}
          </protocArtifact>
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>compile</goal>
              <goal>compile-custom</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>